Fix entry on pt.yml and add messenger.pt.yml

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -32,7 +32,7 @@ pt:
     choose_color: Escolher cor
     image: Imagen
     langs:
-      en: Português
+      en: Inglês
       es: Espanhol
       pt: Português
       de: Alemão
